# pgsimplify

./: .gitignore  README.md  pyproject.toml
src/pgsimplify/: main.py  offsets_in_gfa.py  simplify_non_branching_paths.py  simplify_small_variants.py  simplify_snp_mnp.py  snarl_tree.py  utils.py
