[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pgsimplify"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "gfagraphs",
    "networkx",
    "matplotlib"
]

[project.scripts]
pgsimplify = "pgsimplify.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]